# propy3

./: .coveragerc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .readthedocs.yml  .travis.yml  CHANGELOG.md  LICENSE  MANIFEST.in  Makefile  PKG-INFO  README.md  README.txt  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: python.yaml
docs/: requirements.txt
docs/html/: AAComposition.html  GetSubSeq.html  QuasiSequenceOrder.html
docs/source/: AAComposition.rst  AAIndex.rst  Autocorrelation.rst  CTD.rst  GetProteinFromUniprot.rst  GetSubSeq.rst  ProCheck.rst  PseudoAAC.rst  PyPro.rst  QuasiSequenceOrder.rst  UserGuide.rst  conf.py  index.rst
propy/: AAComposition.py  AAIndex.py  Autocorrelation.py  CTD.py  GetProteinFromUniprot.py  GetSubSeq.py  ProCheck.py  PseudoAAC.py  PyPro.py  QuasiSequenceOrder.py  __init__.py  test.py
propy/aaindex/: README.md  aaindex.doc  changelog
propy/data/: AvFlexibility.json  FreeEnergy.json  Mutability.json  Polarizability.json  README.md  ResidueASA.json  ResidueVol.json  Steric.json  grantham-chemical-distance-matrix.json  hydrophilicity.json  hydrophobicity-autocorrelation.json  hydrophobicity.json  pI.json  pK1.json  pK2.json  residuemass.json  schneider-wrede-physicochemical-distance-matrix.json  target.txt
requirements/: ci.in  ci.txt  dev.in  dev.txt
src/propy/: AAComposition.py  AAIndex.py  Autocorrelation.py  CTD.py  GetProteinFromUniprot.py  GetSubSeq.py  ProCheck.py  PseudoAAC.py  PyPro.py  QuasiSequenceOrder.py  test.py
src/propy/aaindex/: aaindex.doc  aaindex1
src/propy/data/: target.txt
src/propy/html/: AAComposition.html  Autocorrelation.html  CTD.html  GetProteinFromUniprot.html  GetSubSeq.html  PseudoAAC.html  QuasiSequenceOrder.html
src/propy/instruction/: Grantham.xls  Manual.doc  Schneider-Wrede distance.xls
tests/: test_aacomposition.py  test_aaindex.py  test_autocorrelation.py  test_ctd.py  test_get_protein_from_uniprot.py  test_get_sub_seq.py  test_main.py  test_orig.py  test_pro_check.py  test_pseudo.py  test_pypro.py  test_quasi_sequence_order.py
