[metadata]
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
name = propy3

author = Martin Thoma
author_email = info@martin-thoma.de
maintainer = Martin Thoma
maintainer_email = info@martin-thoma.de

version = 1.0.2


url = http://cbdd.csu.edu.cn/index

description = Compute protein descriptors
long_description = file: README.md
long_description_content_type = text/markdown

license = GPLv2

keywords =
    Bio-Informatics
    Protein

classifiers =
    License :: OSI Approved :: GNU General Public License v2 (GPLv2)
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Topic :: Scientific/Engineering :: Bio-Informatics

[options]
include_package_data = true
packages = find:

[tool:pytest]
addopts = --mccabe --cov=./propy --cov-append --cov-report html:tests/reports/coverage-html --cov-report xml:tests/reports/coverage.xml --cov-report term --ignore=docs/ --ignore=propy/__main__.py --durations=3 --timeout=30
doctest_encoding = utf-8

# Just temporarily: Increase from 10 to 25
mccabe-complexity=25

[pydocstyle]
match_dir = propy
convention=numpy

[flake8]
match_dir = propy
max-line-length = 80
select = C,E,F,W,B,B950
# Just temporarily: E731,E800
ignore = E501,W503,E203, E731,E800

[mypy]
ignore_missing_imports=true
check_untyped_defs=true
disallow_untyped_defs=false
warn_redundant_casts=true
warn_unused_configs=true
disallow_untyped_calls=false
follow_imports=skip
mypy_path=typeshed/pyi:typeshed/imports
